translation-tool/inputs/source_meta/objects/HNS_SITE_TYPE_MAPPING__c.object
<CustomObject>
    <description>This is the Old to New Site Type Mapping</description>
    <fields>
        <fullName>HNS_Level__c</fullName>
        <description>Used in case Old Site type is split in to more than 1 New Site types.</description>
        <inlineHelpText>HNS Level</inlineHelpText>
        <label>HNS Level</label>
        <precision>2</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HNS_SITE_TYPE_MAP_ID__c</fullName>
        <description>Site Type Mapping ID</description>
        <externalId>true</externalId>
        <label>HNS SITE TYPE MAP ID</label>
        <length>250</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>New_Site_Type__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>New Site Type</description>
        <label>New Site Type</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>HNS_Products__c.Product_Type__c</field>
                <operation>equals</operation>
                <value>Service</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>HNS_Products__c</referenceTo>
        <relationshipLabel>HNS Site Type Mappings</relationshipLabel>
        <relationshipName>HNS_Site_Type_Mappings</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <label>HNS Site Type Mapping</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Old Site Type</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>HNS Site Type Mappings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>